service-mesh/service3000.yaml
apiVersion: v1
kind: Service
metadata:
 name: echo-server
 annotations:
   cloud.google.com/neg: '{"exposed_ports":{"8443":{"name": "nodejs-neg"}}}'
   networking.gke.io/max-rate-per-endpoint: "1000"
spec:
 ports:
 - port: 3000
   name: https-port
   protocol: TCP
   targetPort: 3000
   run: echo-app
 type: ClusterIP
